# gen-dsp

./: .gitignore  404.html  ADDING_NEW_BACKENDS.md  CHANGELOG.md  LICENSE  Makefile  NEW_BACKENDS.md  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-examples.yml  ci.yml
api/: index.html
api/builder/: index.html
api/cache/: index.html
api/errors/: index.html
api/graph-adapter/: index.html
api/graph-algebra/: index.html
api/graph-compile/: index.html
api/graph-models/: index.html
api/graph-optimize/: index.html
api/graph-simulate/: index.html
api/graph-validate/: index.html
api/manifest/: index.html
api/midi/: index.html
api/parser/: index.html
api/patcher/: index.html
api/project/: index.html
backends/audiounit/: index.html
backends/auv3/: index.html
backends/chuck/: index.html
backends/circle/: index.html
backends/clap/: index.html
backends/csound/: index.html
backends/daisy/: index.html
backends/lv2/: index.html
backends/max/: index.html
backends/puredata/: index.html
backends/standalone/: index.html
backends/supercollider/: index.html
backends/vcvrack/: index.html
backends/vst3/: index.html
backends/webaudio/: index.html
changelog/: index.html
cheatsheet/: index.html
docs/: changelog.md  index.md  midi-cv.md  move-everything.md  multi-circle.md  validating_plugins.md
docs/api/: builder.md  cache.md  errors.md  graph-adapter.md  graph-algebra.md  graph-compile.md  graph-models.md  graph-optimize.md  graph-simulate.md  graph-validate.md  index.md  manifest.md  midi.md  parser.md  patcher.md  platforms.md  project.md
docs/backends/: audiounit.md  auv3.md  chuck.md  circle.md  clap.md  csound.md  daisy.md  lv2.md  max.md  puredata.md  standalone.md  supercollider.md  vcvrack.md  vst3.md  webaudio.md
docs/graph/: README.md  api.md  coverage.md  dsl.md  dsp_graph.md  dsp_pydantic.md
editors/sublime/: GDSP.sublime-syntax
examples/graph/: allpass_reverb.py  chorus.py  fbdelay.py  filter_chain.py  fm_synth.py  multirate_synth.py  noise_gate.py  onepole.py  signal_router.py  smooth_gain.py  stereo_gain.py  subtractive_synth.py  waveshaper.py  wavetable.py
graph/: index.html
graph/api/: index.html
graph/coverage/: index.html
graph/dsl/: index.html
graph/dsp_graph/: index.html
graph/dsp_pydantic/: index.html
inputs_as_params/: index.html
midi-cv/: index.html
move-everything/: index.html
multi-circle/: index.html
new_backends/: index.html
search/: search_index.json
src/gen_dsp/: __init__.py  __main__.py  cli.py  errors.py
src/gen_dsp/core/: __init__.py  builder.py  cache.py  graph.py  graph_init.py  manifest.py  midi.py  parser.py  patcher.py  project.py
src/gen_dsp/dsp_graph/: __init__.py  _deps.py  adapter.py  algebra.py  cli.py  compile.py  optimize.py  simulate.py  subgraph.py  toposort.py  validate.py  visualize.py
src/gen_dsp/graph/: __init__.py  _deps.py  adapter.py  algebra.py  cli.py  compile.py  dsl.py  models.py  optimize.py  serialize.py  simulate.py  subgraph.py  toposort.py  validate.py  visualize.py
src/gen_dsp/templates/: __init__.py
src/gen_dsp/templates/au/: CMakeLists.txt.template  Info.plist.template  _ext_au.cpp  _ext_au.h  au_buffer.h  gen_buffer.h.template  gen_ext_au.cpp  gen_ext_common_au.h
src/gen_dsp/templates/auv3/: CMakeLists.txt.template  Info-AUv3.plist.template  Info-App.plist.template  _ext_auv3.cpp  auv3_buffer.h  gen_buffer.h.template  gen_ext_auv3.mm  gen_ext_common_auv3.h
src/gen_dsp/templates/chuck/: _ext_chuck.cpp  _ext_chuck.h  chuck_buffer.h  gen_buffer.h.template  gen_ext_chuck.cpp  gen_ext_common_chuck.h  makefile.linux  makefile.mac  makefile.template
src/gen_dsp/templates/circle/: Makefile.template  Makefile_chain.template  _ext_circle.cpp  _ext_circle.h  _ext_circle_impl.cpp  _ext_circle_impl.h  circle_buffer.h  cmath  config.txt.template  cstdint  cstdlib  cstring  gen_buffer.h.template  gen_ext_circle.cpp.template  gen_ext_circle_chain.cpp.template  gen_ext_circle_chain_usb.cpp.template  gen_ext_circle_dag.cpp.template  gen_ext_circle_dag_usb.cpp.template  gen_ext_circle_usb.cpp.template  gen_ext_common_circle.h  (+2 more)
src/gen_ext/: __init__.py  __main__.py  cli.py  errors.py
src/gen_ext/core/: __init__.py  builder.py  parser.py  patcher.py  project.py
src/gen_ext/templates/: __init__.py
tests/: __init__.py  conftest.py  test_audiounit.py  test_auv3.py  test_cache.py  test_chuck.py  test_circle.py  test_circle_chain.py  test_circle_dag.py  test_clap.py  test_cli.py  test_csound.py  test_daisy.py  test_graph.py  test_lv2.py  test_manifest.py  test_midi.py  test_packaging.py  test_parser.py  test_patcher.py  test_pd.py  test_platforms.py  test_project.py  test_sc.py  test_standalone.py  test_vcvrack.py  test_vst3.py  test_webaudio.py
tests/dsp_graph/: conftest.py  test_adapter.py  test_algebra.py  test_cli.py  test_compile.py  test_integration.py  test_models.py  test_multirate.py  test_optimize.py  test_simulate.py  test_subgraph.py  test_toposort.py  test_validate.py  test_visualize.py
tests/fixtures/RamplePlayer/: Makefile  RamplePlayer.maxpat
tests/fixtures/gigaverb/: Makefile  gen_buffer.h  gen_ext.cpp
tests/fixtures/spectraldelayfb/: Makefile  gen_buffer.h
tests/graph/: conftest.py  test_adapter.py  test_algebra.py  test_build.py  test_cli.py  test_compile.py  test_dsl.py  test_integration.py  test_models.py  test_multirate.py  test_optimize.py  test_serialize.py  test_simulate.py  test_subgraph.py  test_toposort.py  test_validate.py  test_visualize.py
validating_plugins/: index.html
(+89 files in other folders)
