[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-ext"
version = "0.8.0"
description = "Generate PureData and Max/MSP externals from Max gen~ exports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Spears"},
]
maintainers = [
    {name = "Michael Spears"},
]
keywords = ["puredata", "pd", "max", "msp", "gen~", "dsp", "audio", "external"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gen-ext = "gen_ext.cli:main"

[project.urls]
Homepage = "https://github.com/samesimilar/gen_ext"
Repository = "https://github.com/samesimilar/gen_ext"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gen_ext.templates" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/gen_ext"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
