[project]
name = "gen-dsp"
version = "0.1.4"
description = "Generate multiple dsp plugin formats from Max gen~ exports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Michael Spears" },
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["puredata", "pd", "max", "msp", "gen~", "dsp", "audio", "external"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]

[project.scripts]
gen-dsp = "gen_dsp.cli:main"

[project.urls]
Homepage = "https://github.com/shakfu/gen-dsp"
Repository = "https://github.com/shakfu/gen-dsp"
Changelog = "https://github.com/shakfu/gen-dsp/blob/master/CHANGELOG.md"
Issues = "https://github.com/shakfu/gen-dsp/issues"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/gen_dsp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


